<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.example.chatapp.ui.register.RegisterViewModule" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_screens"
        android:paddingBottom="90dp"
        tools:context=".ui.register.RegisterActivity">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:hint="@string/user_name"
            android:layout_marginTop="-50dp"
            android:layout_marginHorizontal="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={vm.userName}"
                app:Error="@{vm.userNameError}"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/user_name"
            android:hint="@string/email"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={vm.email}"
                app:Error="@{vm.emailError}"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/email"
            android:hint="@string/password"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={vm.password}"
                app:Error="@{vm.passwordError}"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/password"
            android:background="@drawable/login_buttom"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="40dp"
            android:onClick="@{()->vm.register()}"
            android:text="@string/create_account"
            android:drawableEnd="@drawable/back_icon" />
        <TextView
            android:id="@+id/have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            app:layout_constraintTop_toBottomOf="@id/btn_create_account"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="20sp"
            android:onClick="@{()->vm.navigateToLogin()}"
            android:layout_margin="20dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
