<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="@layout/activity_add_room">

    <data>
<variable
    name="vm"
    type="com.example.chatapp.ui.addRoom.AddRoomViewModule" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="10dp"
        app:cardCornerRadius="10dp"
        app:contentPadding="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_new_room"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="18sp" />
            <ImageView
                android:layout_width="160dp"
                android:layout_height="107dp"
                android:src="@drawable/add_room_img"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/room_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_room_name"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={vm.roomName}"
                    app:Error="@{vm.roomNameError}" />
            </com.google.android.material.textfield.TextInputLayout>
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="15dp"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/room_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_room_description"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="5"
                    android:gravity="start"
                    android:text="@={vm.roomDescription}"
                    app:Error="@{vm.roomDescriptionError}" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:textSize="16dp"
                android:onClick="@{()->vm.createRoom()}"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>